u_rhs seems to be working.  Next things to do:     - write some tests for u_rhs     - write some unit tests for everything     - check timeline

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1198,68 +1198,93 @@
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:243: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
-      "ode.py:118: RuntimeWarning: invalid value encountered in add\n",
-      "  R = abs((-5.0*k1+6.0*k2+8.0*k3-9.0*k4)*hStep)/72.0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-758a6e195c16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mqpu_vec2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
      ]
     }
    ],
    "source": [
-    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
+    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2, window = propagate_dynamics(myAgent2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "qp_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00000000e+000             nan 0.00000000e+000             nan\n",
+      " 0.00000000e+000             inf 2.26876154e+244] [ 0. nan] [ 0. nan] [ 0. inf] [1.84336875e+244] [array([0.        , 2.28402521]), array([ 0.        , 11.04933814]), array([0.00000000e+000, 4.17329291e+126]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan])] [array([0.        , 2.46597479]), array([ 0.        , -8.35686247]), array([ 0.00000000e+000, -4.17329291e+126]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan]), array([ 0., nan])] [array([0.        , 1.28402521]), array([ 0.        , 10.04933814]), array([0.00000000e+000, 4.17329291e+126]), array([ 0., inf]), array([ 0., inf]), array([ 0., inf]), array([ 0., inf])] [array([7.2300973]), array([1905.46543532]), array([2.26876154e+244]), array([2.26876154e+244]), array([2.26876154e+244]), array([2.26876154e+244]), array([2.26876154e+244])] (1, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2, window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "myAgent2.qp_rhs(0.0, qp_vec, state_dim=myAgent2.state_dim, Gamma = myAgent2.Gamma, u_0=u_0, q_mf=q_mf, u_mf=u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "qpu_vec=np.array([q_s, p_mf, p_mf, u_s])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.])], [array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.]), array([ 0.,  0., -0., -0.,  0.,  0.])])\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:  these should not both work, right?  myAgent and myAgent2 have different state dimensions\n",
     "qpu_vec = np.array([0,0,0,0,0,0,0])\n",
@@ -1271,11 +1296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:260: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:243: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    }
+   ],
    "source": [
     "sync.synchronize()"
    ]
